Fix QR code vertical alignment.

--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,8 @@
 body {
   display: flex;
   justify-content: center;
+  min-height: 100vh;
+  align-items: center;
 }
 
 #div-background {
